Fix alignment of contact links

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -41,7 +41,7 @@ header img {
 header h3 {
     position: relative;
     float: right;
-    margin-right: 240px;
+    margin-right: 220px;
     margin-bottom: 0;
     margin-top: -25px;
 }
